BAP-2642: fix for overlapping widgets and select elements

--- a/src/Oro/Bundle/SidebarBundle/Resources/public/css/sidebar.css
+++ b/src/Oro/Bundle/SidebarBundle/Resources/public/css/sidebar.css
@@ -299,5 +299,5 @@
 }
 .sidebar-widget-popup,
 .sidebar-widget-popup .sidebar-widget {
-    z-index: 12;
+    z-index: 1200;
 }
